--- a/packages/@tinacms/cli/package.json
+++ b/packages/@tinacms/cli/package.json
@@ -57,6 +57,7 @@
     "@graphql-codegen/visitor-plugin-common": "^2.4.0",
     "@graphql-tools/graphql-file-loader": "^7.2.0",
     "@graphql-tools/load": "^7.3.2",
+    "@tinacms/client": "workspace:*",
     "@tinacms/datalayer": "workspace:*",
     "@tinacms/graphql": "workspace:*",
     "@tinacms/metrics": "workspace:*",
