--- a/packages/@tinacms/client/package.json
+++ b/packages/@tinacms/client/package.json
@@ -29,6 +29,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jest": "^27.0.6",
     "jest-file-snapshot": "^0.5.0",
+    "tsafe": "^0.10.0",
     "typescript": "^4.3.5"
   },
   "scripts": {
