--- a/packages/@tinacms/client/package.json
+++ b/packages/@tinacms/client/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@tinacms/graphql": "workspace:*",
     "@tinacms/schema-tools": "workspace:*",
+    "@types/prettier": "^2.6.3",
     "fs-extra": "^10.1.0",
     "graphql": "^15.1.0",
     "jest-snapshot": "^28.1.1",
