Get POC working

--- a/experimental-examples/tina-cloud-starter/package.json
+++ b/experimental-examples/tina-cloud-starter/package.json
@@ -29,6 +29,7 @@
     "@headlessui/react": "^1.5.0",
     "@tailwindcss/typography": "^0.4.1",
     "@tinacms/auth": "workspace:*",
+    "@tinacms/app": "workspace:*",
     "date-fns": "^2.23.0",
     "next": "^11.0.4",
     "next-svgr": "^0.0.2",
