--- a/packages/@tinacms/app/package.json
+++ b/packages/@tinacms/app/package.json
@@ -22,15 +22,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "esbuild": "^0.14.49",
+    "happy-dom": "^6.0.4",
+    "postcss-nested": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6.4.0-pre.10",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vite-node": "^0.18.1",
+    "vitest": "^0.18.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "vite-plugin-inspect": "^0.6.0"
   }
 }
