WIP - getting vite app working

--- a/experimental-examples/tina-cloud-starter/package.json
+++ b/experimental-examples/tina-cloud-starter/package.json
@@ -10,6 +10,7 @@
     "build:prod": "tinacms build && next build"
   },
   "devDependencies": {
+    "@tinacms/app": "workspace:*",
     "@svgr/webpack": "^6.2.1",
     "@tinacms/cli": "workspace:*",
     "@types/js-cookie": "^3.0.0",
