--- a/packages/@tinacms/app/package.json
+++ b/packages/@tinacms/app/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@tinacms/app",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@tinacms/vite-test-app",
+  "version": "0.0.3",
   "type": "module",
   "bin": {
     "tinaspa": "./script.mjs"
@@ -34,9 +33,7 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-node": "^0.18.1",
-    "vitest": "^0.18.1"
-  },
-  "devDependencies": {
+    "vitest": "^0.18.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.0",
